--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
-name: simple_audio
-description: A simple cross-platform solution for playing audio in Flutter.
-version: 1.9.0
+name: simple_audio_fork
+description: A fork of the simple cross-platform solution for playing audio in Flutter.
+version: 1.9.1
 homepage: https://github.com/erikas-taroza/simple_audio
-repository: https://github.com/erikas-taroza/simple_audio
+repository: https://github.com/dannyglover/simple_audio
 topics:
   - audio
   - audio-player
